[tool.poetry]
name = "datlas"
version = "0.0.1"
description = ""
authors = ["LucidCatnap <lucidcatnap@gmail.com>"]
license = "No"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
Flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"